--- a/metro.tex
+++ b/metro.tex
@@ -61,16 +61,16 @@
 %\enclosure[Attachments]{Curriculum Vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
-I am writing to express my interest in spending an internship with Metro AG in strategic research. I am currently doing the last steps of doctorate in Mathematics in FSU Jena Germany. I have four years experience as research employee and five years teaching experience as well as several years of cooperation with experts in other fields including urban planning and economists.
+?I am writing to express my interest in spending an internship with Metro AG in strategic research?. I am currently doing the last steps of doctorate in Mathematics of FSU Jena Germany. I have four years experience as research employee and five years teaching experience as well as several years of cooperation with experts in other fields including economists and urban planners.
 
-Now after several years of mainly doing academic jobs, I would like to switch into a more practical yet active sector and found the business analysis really interesting and perfectly fitted to my theoretical background. I did several courses in Statistics, Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Introduction to Big Data, Programming and Data structures as well as data banks and SQL. I am already expert in MS Office, intermediate in R and familiar with python. Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}. 
+Now after several years of mainly doing academic jobs, I would like to switch into a more practical yet active sector and found the business analysis really interesting and perfectly fitted to my theoretical background. I did several courses in Statistics, Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Introduction to Big Data, Programming and Data structures as well as data banks and SQL. I am already expert in MS Office, intermediate in R and familiar with python and MatLab. Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}. 
 
-In terms of working experience, I have thought various topics of mathematics from abstract algebra to differential equations and analysis. I also cooperated with economists to study financial derivatives with aim of understanding their nature and relationship with gambling. Together urban planners we develop an algorithm for assessing accessibility in cities using big graphs and I programmed it in MatLab. Through which I gained experience in spatial analysis especially working with ArcGIS software package. I also am familiar with, by nature statistical, techniques of remote sensing, and help urban planners running them through R programming.
+In terms of working experience, I have thought various topics of mathematics from abstract algebra to differential equations and analysis. I also cooperated with economists to study financial derivatives with aim of understanding their relationship with gambling. Together urban planners we developed an algorithm for assessing accessibility in cities using big graphs and I programmed it in MatLab. Through which I gained experience in spatial analysis especially working with ArcGIS software package. I also am familiar with, by nature statistical, techniques of remote sensing, and help urban planners running them through R programming.
 
 In terms of transferable skills, I am confident in my analysing and problem solving abilities as key skills in mathematics. I learned how to translate real world problems into mathematical statements and vice versa while cooperating with other professions as well as math work. I did cooperate in teams with diverse skills. Also for several years I thought mathematics to students of various scientific and social backgrounds through which you have to be enormously patient, friendly and understanding as well as being able to express complicated problems in understandable manners. Last but not least, I am an independent fast leaner and capable of finding the best way jobs are done using available resources.
 
-I have studied well and have a lot of theoretical information regarding data analysis. I believe that working in a professional team of experts in a supreme corporation like Metro is a great opportunity to get real work experience for a new career. I have German work permit and am ready to start as soon as desired. Beside very good English knowledge, I can also speak good German. 
- I appreciate your time and consideration and am looking forward to meet you as your first convenience.
+?I have studied well and have a lot of theoretical information regarding data analysis?. I believe that working in a professional team of experts in a supreme corporation like Metro is a great opportunity to get real work experience for a new career. I have German work permit and am ready to start as soon as desired. Beside very good English knowledge, I can also speak good German. 
+ I appreciate your time and consideration and am looking forward to meet you at your first convenience.
  \vspace{3mm}
  
 \makeletterclosing
