--- a/metro.tex
+++ b/metro.tex
@@ -56,21 +56,36 @@
 % recipient data
 \recipient{METRO AG}{Metro-Stra\ss e 1\\40235 D\"usseldorf}
 \date{May 17, 2016}
-\opening{\textbf{Applying for  Strategic Research Internship (Reference number: M/16-00076)}\\Dear Mrs. Katharina Poschen,}
+\opening{\textbf{Applying for  Strategic Research Internship (Reference number: M/16-00076)}}
 \closing{With Highest Regards,}
 %\enclosure[Attachments]{Curriculum Vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
-?I am writing to express my interest in spending an internship with Metro AG in strategic research?. I am currently doing the last steps of doctorate in Mathematics of FSU Jena Germany. I have four years experience as research employee and five years teaching experience as well as several years of cooperation with experts in other fields including economists and urban planners.
+Dear Mrs. Katharina Poschen,
 
-Now after several years of mainly doing academic jobs, I would like to switch into a more practical yet active sector and found the business analysis really interesting and perfectly fitted to my theoretical background. I did several courses in Statistics, Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Introduction to Big Data, Programming and Data structures as well as data banks and SQL. I am already expert in MS Office, intermediate in R and familiar with python and MatLab. Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}. 
+As a mathematics researcher in FSU Jena and with over four years experience as research employee and several years of cooperation in other fields such as economics and urban planing, I feel that I am an excellent fit for this position.
 
-In terms of working experience, I have thought various topics of mathematics from abstract algebra to differential equations and analysis. I also cooperated with economists to study financial derivatives with aim of understanding their relationship with gambling. Together urban planners we developed an algorithm for assessing accessibility in cities using big graphs and I programmed it in MatLab. Through which I gained experience in spatial analysis especially working with ArcGIS software package. I also am familiar with, by nature statistical, techniques of remote sensing, and help urban planners running them through R programming.
 
-In terms of transferable skills, I am confident in my analysing and problem solving abilities as key skills in mathematics. I learned how to translate real world problems into mathematical statements and vice versa while cooperating with other professions as well as math work. I did cooperate in teams with diverse skills. Also for several years I thought mathematics to students of various scientific and social backgrounds through which you have to be enormously patient, friendly and understanding as well as being able to express complicated problems in understandable manners. Last but not least, I am an independent fast leaner and capable of finding the best way jobs are done using available resources.
+%?I am writing to express my interest in spending an internship with Metro AG in strategic research? I am currently doing the last steps of doctorate in Mathematics of FSU Jena Germany I have four years experience as research employee and five years teaching experience as well as several years of cooperation with experts in other fields including economists and urban planners.
 
-?I have studied well and have a lot of theoretical information regarding data analysis?. I believe that working in a professional team of experts in a supreme corporation like Metro is a great opportunity to get real work experience for a new career. I have German work permit and am ready to start as soon as desired. Beside very good English knowledge, I can also speak good German. 
- I appreciate your time and consideration and am looking forward to meet you at your first convenience.
+After several years of doing academic research and gaining a lot of theoretical knowledge, I would like to switch into a more practical sector to use my knowledge. Therefore, I found Business Analysis really interesting and perfectly fitted to my expectation.
+
+Regarding my theoretical background, I have done several courses in Statistical Inference, Operations Research, Exploratory Data Analysis and Big Data Analysis which helped me to learn fundamental topics in Intelligence Analysis such as: XXXXX, XXXX, XXXXX. Moreover, in terms of working experience, I have cooperated with economists to study financial derivatives with aim of understanding their relationship with gambling. Furthermore, together with urban planners I developed an algorithm for hospital facility location in Tehran (Capital of Iran) using big graphs.
+
+
+% I am already expert in MS Office, intermediate in R and familiar with python and MatLab. Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}. 
+
+
+
+%Through which I gained experience in spatial analysis especially working with ArcGIS software package. I also am familiar with, by nature statistical, techniques of remote sensing, and help urban planners running them through R programming.
+
+As a mathematician, my background helps me to be able to focus on details and be able to understand complicated problems. I have good analytical thinking and problem solving skills and my teaching experiences also helps me to be able to break sophisticated concepts to some small and understandable pieces and present them in a proper way to none-technical people. Moreover, I have cooperated with different teams with diverse skills and I have a great teamwork spirit.
+
+% As my CV illustrates, I have a broad range of computer and Internet skills which make me able to handle all the daily and office works.
+
+
+My vision for undertaking this position is to become able to use my theoretical knowledge in practical projects and I believe that working in such a professional team in a supreme corporation like Metro is a great opportunity to get real work experience for a new career. I am confident in my abilities and believe that working in your group will result in significant advancement of my skills. I should mention that I have German work permit and am ready to start as soon as desired.
+
  \vspace{3mm}
  
 \makeletterclosing
