--- a/metro.tex
+++ b/metro.tex
@@ -6,7 +6,7 @@
 % available at http://www.latex-project.org/lppl/.
 
 
-\documentclass[11pt,a4paper,sans]{moderncv}        % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
+\documentclass[12pt,a4paper,sans]{moderncv}        % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
 
 % moderncv themes
 \moderncvstyle{classic}                            % style options are 'casual' (default), 'classic', 'oldstyle' and 'banking'
@@ -63,14 +63,12 @@
 
 Dear Mrs. Katharina Poschen,
 
-As a mathematics researcher in FSU Jena and with over four years experience as research employee and several years of cooperation in other fields such as economics and urban planing, I feel that I am an excellent fit for this position.
+As a mathematics researcher in FSU Jena and with over four years experience as research employee and several years of cooperation in related fields such as economics and urban planing, I feel that I am an excellent fit for this position.
 
 
 %?I am writing to express my interest in spending an internship with Metro AG in strategic research? I am currently doing the last steps of doctorate in Mathematics of FSU Jena Germany I have four years experience as research employee and five years teaching experience as well as several years of cooperation with experts in other fields including economists and urban planners.
 
-After several years of doing academic research and gaining a lot of theoretical knowledge, I would like to switch into a more practical sector to use my knowledge. Therefore, I found Business Analysis really interesting and perfectly fitted to my expectation.
-
-Regarding my theoretical background, I have done several courses in Statistical Inference, Operations Research, Exploratory Data Analysis and Big Data Analysis which helped me to learn fundamental topics in Intelligence Analysis such as: XXXXX, XXXX, XXXXX. Moreover, in terms of working experience, I have cooperated with economists to study financial derivatives with aim of understanding their relationship with gambling. Furthermore, together with urban planners I developed an algorithm for hospital facility location in Tehran (Capital of Iran) using big graphs.
+I have done several courses in Statistical Inference, Operations Research, Exploratory Data Analysis and Big Data Analysis which helped me to learn basis of \textbf{Intelligence Analysis} techniques such as: XXXXX, XXXX, XXXXX. Moreover, in terms of working experience, I have cooperated with economists to study financial derivatives with aim of understanding their relationship with gambling. Furthermore, together with urban planners I developed an algorithm for hospital facility location in Tehran (Capital of Iran) exploiting big graphs.
 
 
 % I am already expert in MS Office, intermediate in R and familiar with python and MatLab. Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}. 
@@ -83,8 +81,7 @@ As a mathematician, my background helps me to be able to focus on details and be
 
 % As my CV illustrates, I have a broad range of computer and Internet skills which make me able to handle all the daily and office works.
 
-
-My vision for undertaking this position is to become able to use my theoretical knowledge in practical projects and I believe that working in such a professional team in a supreme corporation like Metro is a great opportunity to get real work experience for a new career. I am confident in my abilities and believe that working in your group will result in significant advancement of my skills. I should mention that I have German work permit and am ready to start as soon as desired.
+After several years of doing academic research and gaining a lot of theoretical knowledge, my vision for undertaking this position is to become able to use my theoretical knowledge in practical projects and I believe that working in such a professional team in a supreme corporation like Metro is a great opportunity to get real work experience for a new career. I am confident in my abilities and believe that working in your group will result in significant advancement of my skills. I should mention that I have German work permit and am ready to start as soon as desired.
 
  \vspace{3mm}
  
