trivago-data-analyst start

--- a/triago-data-analyst.tex
+++ b/triago-data-analyst.tex
@@ -54,21 +54,22 @@
 \begin{document}
 %-----       letter       ---------------------------------------------------------
 % recipient data
-\recipient{METRO AG}{Metro-Stra\ss e 1\\40235 D\"usseldorf}
+\recipient{Business Intelligence team}{trivago GmbH\\Bennigsen-Platz 1
+	\\40474 D\"usseldorf}
 \date{May 17, 2016}
-\opening{\textbf{Applying for  Strategic Research Internship (Reference number: M/16-00076)}}
+\opening{\textbf{Applying for  Junior Data Analyst for Sales position}}
 \closing{With Highest Regards,}
 %\enclosure[Attachments]{Curriculum Vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
-Dear Mrs. Katharina Poschen,
+Dear Sir/Madam
 
 As a mathematics researcher in FSU Jena and with over four years experience as research employee and several years of cooperation in related fields such as economics and urban planing, I feel that I am an excellent fit for this position.
 
 
 %?I am writing to express my interest in spending an internship with Metro AG in strategic research? I am currently doing the last steps of doctorate in Mathematics of FSU Jena Germany I have four years experience as research employee and five years teaching experience as well as several years of cooperation with experts in other fields including economists and urban planners.
 
-I have done several courses in Statistical Inference, Operations Research, Exploratory Data Analysis and Big Data Analysis.
+I have done several courses in Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Big Data, Programming and Data structures as well as data banks and SQL. I am already expert in MS Office, intermediate in R and familiar with python and Hadoop. Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}.
 % which helped me to learn basis of \textbf{Intelligence Analysis} techniques such as: XXXXX, XXXX, XXXXX. 
 Moreover, in terms of working experience, I have cooperated with economists to study financial derivatives with aim of understanding their relationship with gambling. Furthermore, together with urban planners I developed an algorithm for hospital facility location in Tehran (Capital of Iran) exploiting big graphs.
 
