--- a/triago-data-analyst.tex
+++ b/triago-data-analyst.tex
@@ -69,9 +69,9 @@ As a mathematics researcher in FSU Jena and with over four years experience as r
 
 %?I am writing to express my interest in spending an internship with Metro AG in strategic research? I am currently doing the last steps of doctorate in Mathematics of FSU Jena Germany I have four years experience as research employee and five years teaching experience as well as several years of cooperation with experts in other fields including economists and urban planners.
 
-I have done several courses in Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Big Data as well as data banks and SQL. I am already expert in MS Office, intermediate in R and familiar with python and Hadoop. Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}.
+I have done several courses in Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Big Data as well as data banks and SQL. I am already expert in MS Office, competent in R and familiar with python and Hadoop. %Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}.
 % which helped me to learn basis of \textbf{Intelligence Analysis} techniques such as: XXXXX, XXXX, XXXXX. 
-Moreover, in terms of working experience, I have cooperated with economists to study financial derivatives with aim of understanding their relationship with gambling. We studied the structure of derivatives and their aim as benefit increaser or risk shrinker. Finally concluded that they are different from gambling mainly because the motivation behind them is benefit not pleasure.   
+Moreover, in terms of working experience, I have cooperated with economists to study financial derivatives with aim of understanding their relationship with gambling. We investigate the structure of derivatives and their aim as benefit increaser or risk shrinker. Finally concluded that they are different from gambling mainly because the motivation behind them is benefit not pleasure.   
 Furthermore, together with urban planners I use data analysis and machine learning techniques such as regression, clustering and random forest mainly for land cover classification of satellite images.
 
 %Furthermore, together with urban planners I developed an algorithm for hospital facility location in Tehran (Capital of Iran) exploiting big graphs. Precisely I suggest a method to asses every point in the city in terms of accessibility. 
@@ -83,11 +83,11 @@ Furthermore, together with urban planners I use data analysis and machine learni
 
 %Through which I gained experience in spatial analysis especially working with ArcGIS software package. I also am familiar with, by nature statistical, techniques of remote sensing, and help urban planners running them through R programming.
 
-As a mathematician, my background helps me to be able to focus on details and understand complicated problems. I have good analytical thinking and problem solving skills. My teaching experiences also helps me to be able to break sophisticated concepts to some small and understandable pieces and present them in a proper way to none-technical people. Moreover, I have cooperated with different teams with diverse skills and I have a great teamwork spirit. In addition, I’m an independent quick learner and I have the mind-set. 
+As a mathematician, my background helps me to be able to focus on details and understand complicated problems. I have good analytical thinking and problem solving skills. My teaching experiences also helps me to be able to break sophisticated concepts to small and understandable pieces and present them in a proper way to none-technical people. Moreover, I have cooperated with different teams with diverse skills and I have a great teamwork spirit. In addition, I’m an independent quick learner and I have the mind-set. 
 
 % As my CV illustrates, I have a broad range of computer and Internet skills which make me able to handle all the daily and office works.
 
-After several years of doing academic research and gaining a lot of theoretical knowledge, beside some practical experience, my vision for undertaking this position is to be able to use this knowledge in practical projects, learn vocational skills and extend them as much as possible. I would like be a part of  a company with a dynamic atmosphere which let me grow while helping me learn. I believe that a junior position in trivago would be a great start for a new career in data analysis. I am confident in my abilities and believe that working in your group will be beneficial for me and the group. I should mention that I have German work permit and am ready to start as soon as possible.
+After several years of doing academic research and gaining a lot of theoretical knowledge, beside some practical experience, my vision for undertaking this position is to be able to use this knowledge in practical projects and extend my vocational skills. I would like be a part of  a company with a dynamic atmosphere which lets me grow while helping me learn. I believe that a junior position in trivago would be a great start for my career objective, data analysis. I am confident in my abilities and believe that working in your group will be beneficial for me and the group. I should mention that I have German work permit and am ready to start as soon as possible.
 
  \vspace{3mm}
  
