--- a/triago-data-analyst.tex
+++ b/triago-data-analyst.tex
@@ -69,7 +69,7 @@ As a mathematics researcher in FSU Jena and with over four years experience as r
 
 %?I am writing to express my interest in spending an internship with Metro AG in strategic research? I am currently doing the last steps of doctorate in Mathematics of FSU Jena Germany I have four years experience as research employee and five years teaching experience as well as several years of cooperation with experts in other fields including economists and urban planners.
 
-I have done several courses in Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Big Data as well as data banks and SQL. I am already expert in MS Office, competent in R and familiar with python and Hadoop. %Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}.
+I have done several courses in Statistical inference, Operational Research, Exploratory Data Analysis,  Machine learning, Big Data as well as data banks. I am already expert in MS Office, competent in R and SQL and familiar with python and Hadoop. %Some works of mine are available in my  \href{https://github.com/srhumir}{\textcolor{blue}{\underline{github page}}}.
 % which helped me to learn basis of \textbf{Intelligence Analysis} techniques such as: XXXXX, XXXX, XXXXX. 
 Moreover, in terms of working experience, I have cooperated with economists to study financial derivatives with aim of understanding their relationship with gambling. We investigate the structure of derivatives and their aim as benefit increaser or risk shrinker. Finally concluded that they are different from gambling mainly because the motivation behind them is benefit not pleasure.   
 Furthermore, together with urban planners I use data analysis and machine learning techniques such as regression, clustering and random forest mainly for land cover classification of satellite images.
